...

      <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewBackDrop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0.4"
        app:layout_constraintBottom_toTopOf="@id/textViewTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />


...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPoster"
        tools:ignore="HardcodedText" />

      <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
...
