<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_movie"
        android:icon="@drawable/ic_local_movies_black_24dp"
        android:title="@string/movies"/>

    <item
        android:id="@+id/navigation_tv_show"
        android:icon="@drawable/ic_live_tv_black_24dp"
        android:title="@string/tv_shows"/>

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_added_to_favorites"
        android:title="@string/favorites"/>
</menu>