<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/swipeRefresh"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="#CACACA"
  tools:context=".features.home.ui.fragment.MovieFragment">

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/recyclerViewItems"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:listitem="@layout/item_list_data" />
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>